--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,9 +21,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "allowJs": true,
+    "checkJs": false
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "docs/**/*.js"],
   "exclude": [
     "node_modules", // Exclude the node_modules directory
     "**/*.spec.ts",
