--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -8,6 +8,13 @@ on:
 jobs:
   test_and_deploy:
     runs-on: ubuntu-latest
+    env: # declare secrets here
+      CLIENT_URL: ${{ secrets.CLIENT_URL }}
+      ACCESS_JWT_KEY: ${{ secrets.ACCESS_JWT_KEY }}
+      REFRESH_JWT_KEY: ${{ secrets.REFRESH_JWT_KEY }}
+      RESET_JWT_KEY: ${{ secrets.RESET_JWT_KEY }}
+      TEMP_2FA_JWT_KEY: ${{ secrets.TEMP_2FA_JWT_KEY }}
+      RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
 
     steps:
       # Checkout code
