--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,6 +9,11 @@ jobs:
   test_and_deploy:
     runs-on: ubuntu-latest
     env: # declare secrets here
+      PORT: ${{ secrets.PORT }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      EMAIL_SERVICE: ${{ secrets.EMAIL_SERVICE }}
+      COURIER_AUTH_TOKEN: ${{ secrets.COURIER_AUTH_TOKEN }}
+      COURIER_DOMAIN: ${{ secrets.COURIER_DOMAIN }}
       CLIENT_URL: ${{ secrets.CLIENT_URL }}
       ACCESS_JWT_KEY: ${{ secrets.ACCESS_JWT_KEY }}
       REFRESH_JWT_KEY: ${{ secrets.REFRESH_JWT_KEY }}
