test(github-action): check render.com auto deploy does not happen

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -72,7 +72,7 @@ jobs:
           npm install
           npm run build
 
-      # Deploy to Render if everything is successful
+      # Deploy to Render if everything is successfull
       - name: Deploy to Render
         if: success()
         env:
