--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -76,7 +76,7 @@ jobs:
       - name: Deploy to Render
         if: success()
         env:
-          RENDER_API_KEY: ${{ secrets.RENDER_DEPLOY_HOOK }}
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
           curl -X POST \
           -H "Authorization: Bearer $RENDER_API_KEY" \
